# matcha

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  TODO  docker-compose.yml
.sqlx/: query-025883d18367bfe5e77f231158a002e6b2a8747dbe00a4bc9f620a2162f9d2a0.json  query-0711685aa5522ce8fe015c97220b1093c7ea2cff2a8fb8cbb5ad6bee629bfef8.json  query-07b16af6ab804eae4f846e773c88d93fced3a23c5ddbe65737235517e3aa167a.json  query-087cc5858842111bc9dc6b8163b73c7dd1c6d4cad84481321cd2b1c33696caf8.json  query-0a6526f6d659a63713a5dff15e07029e4d479922c0efa06452db807514738f41.json  query-0cd29d2c9bc890a378a2ae6b5a53e3bf05981e1a2bdd6138db2f50108dbd7cb7.json  query-0e7d9a0db3d47b1f2cc5d0d95b54b1a58a4b89c1f468bf065dacdb9d03586fd7.json  query-0f89cff8e12765a2e4358159021d715a3bc385409b3bb2ff356ab1e0ecbd9f9b.json  query-122955e414b3953bdb59af7c4ec65c5cb6e2eb4f6339ea353475af50d930b4ca.json  query-127e4478d18552bc01cceda9852607e5a19369f959006d37fcd6a87d14673e2e.json  query-1650b302b3855e1e15971008d56aa9b23b04913d8546f88225d794fcda0bea0a.json  query-17e81f6e8c2f92310d3c5d4f363bca402b8883257dca85721fabe3aa9d4b85da.json  query-1defc29d6e319c153d29cf69934f02683dfe445843333c22c97c3e304620fa8a.json  query-1ed14fc588fdef78386f27d3883ec83b5a75f0a337b8adaf39a83c35e60c4719.json  query-27e403d3e02712d78e7ec0d2eb1cfce352971db5d85db16b04a3ad6b93b28e79.json  query-2f68fe5a7c07cd9ad291abbcae0718c6d3e5fa648c5f4254d6c9aa21fc9ae3d4.json  query-357fb555baa05766e9ca00cfd28a0a60a0f184721e090f947b10b36c81837e31.json  query-361fe9b4861b9f3f1c7784963d0f3c6296ab6f56cd9a723c0428551f13eb6b9b.json  query-396cf32cf12c6fd83ab2e9fd733cb481468d4b8dab255a3af6994d1657bbd4f7.json  query-49805dce6d0736bd8e8cc0a8268f6f9f6e6dff64feb01ac5baf743600ef19b44.json  query-4b56d9b16a33402f9ac95ee49a3d7f7c6c20e6fe459be45c7411dac5ddcfe486.json  query-4fa8d0e8d8af88f1c66db0526d39d4a05e15c877d9e6fda83de18ba8e4719bec.json  query-524af1397a42300bca37be49d7de4c7a127abcf81008910d06dab4420e27b51f.json  query-541adb4424d7bcee9619aa3038fcae47791144d2f9372aca3c178dc696cebf48.json  query-55d589edb9e05707097057fca25dd95f910a6708aee24911ebce06411b14f7af.json  query-58e1f699dcf696bacb59b277cba7517501d6cbd536c1194cf9de2ce4ddd85823.json  query-592b925828782188c8b214a2055266d33883ca20d7cb57b657f20609e62a07a8.json  query-5fba1061efb4a34329ee81f0335548dec236497a89391ebd87fd44979fc645f7.json  query-62c3efb25fe2e3dab5498aacb9e5b642f3cf7350dc2d7d3afcb0e5e43b1df354.json  query-63cbca840fdc16ade31b02a8cff153b3503f343a31ac0cf79fe025b06e2fb8c5.json  query-63ff17d48e3ba7fbd21e0d7b734a0b6f0d64e5ef750d1621324ede9674921137.json  query-6455e6ec3fb2223b19ea934eecb419bfda631ff845e0fa6b527de9d4695e98cc.json  query-64c98e67c965c56b6c8af79a288c124b7f0522e1c9fd7c4135a709ff871faa28.json  query-68cef9c0ffc323b4d6f3ce7a48f89505af5aaf3ca7bbd5792acc8d77a9acb263.json  query-69a4fd9e48d3aec3ff1cbb99d237537a4f248076ee5c3517b3161cfb1d606516.json  query-71f990aed183e2a3767f813aae2542005ab2c98d5f75805611272b4a639f58c9.json  query-74bf7d5cb8f37599d10371eed9d284f4fcd8a42006ed8f06ac0154d240f1372f.json  query-75db4fc737d21595d1d22083b32f1455fd89988d00a38fa3debba3c7c6a40740.json  query-75e4f7de17af359d0c250ffbb6d6c57504988d045ca1d9c726a7defa433ac389.json  query-7faef430b3305989137aefb248dc510e7ecaa5d5ee7ee9c783f6f5cd976a4c52.json  (+50 more)
app/: .prettierrc  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
crates/mail-template/: Cargo.toml
crates/mail-template/mail-template-macro/: Cargo.toml
crates/mail-template/mail-template-macro/src/: lib.rs
crates/mail-template/src/: error.rs  lib.rs
crates/oauth2/: Cargo.toml
crates/oauth2/src/: error.rs
crates/oauth2/src/client/: mod.rs
crates/oauth2/src/client/providers/: ft.rs  mod.rs
deployments/: otel-collector-config.yaml
migrations/: 20250108192401_init.sql  20250108192406_create_user.sql  20250108192658_create_oauth_provider.sql  20250111164247_create_user_profile.sql  20250127184248_add_chat.sql  20250129003916_add_more_profile_params.sql  20250129034311_add_blocked_user.sql  20250129151011_add_reported_user.sql
src/: lib.rs  main.rs
(+176 files in other folders)
