[package]
name = "matcha-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["http2"], default-features = false }
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = { version = "0.4.1", features = ["scalar", "query", "extras", "garde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "sqlx-macros"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
regex = "1.11.1"
dotenvy = "0.15.7"
config = "0.15.4"
garde = { version = "0.21.0", features = ["regex", "email"] }
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.27.0"
chrono = "0.4.38"
async-trait = "0.1.83"
once_cell = "1.20.2"
rs-snowflake = "0.6.0"
oauth2 = { path = "crates/oauth2", version = "*" }
rand = "0.8.5"
hex = "0.4.3"
ddd-rs = { version = "1.2.1", features = ["derive"] }

[workspace]
members = ["crates/oauth2"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
