[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
oauth2 = "4.4.2"
serde_json = "1.0.134"
async-trait = "0.1.83"
thiserror = "2.0.9"
tracing = "0.1.41"
